# HTTP-Web-Framework

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
examples/: modern_microservice.cpp
include/: http_framework.hpp
include/async/: future.hpp  promise.hpp  task.hpp
include/core/: connection.hpp  server.hpp  thread_pool.hpp  types.hpp
include/graphql/: schema.hpp
include/grpc/: server.hpp
include/http/: middleware.hpp  request.hpp  response.hpp  router.hpp
include/network/: socket.hpp
include/patterns/: event_sourcing.hpp
include/resilience/: circuit_breaker.hpp
include/streaming/: sse.hpp
include/tracing/: tracer.hpp
include/utils/: logger.hpp
include/websocket/: frame.hpp  websocket.hpp
scripts/: create_release.ps1  create_release.sh
src/: main.cpp  simple.cpp
src/http/: request.cpp  response.cpp
tests/: CMakeLists.txt  test_request.cpp  test_response.cpp  test_router.cpp  test_websocket.cpp
